// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`simple website content 1`] = `
Object {
  "docs": Array [
    Object {
      "collapsed": true,
      "items": Array [
        Object {
          "collapsed": true,
          "items": Array [
            Object {
              "id": "foo/bar",
              "type": "doc",
            },
            Object {
              "id": "foo/baz",
              "type": "doc",
            },
          ],
          "label": "foo",
          "type": "category",
        },
        Object {
          "href": "https://github.com",
          "label": "Github",
          "type": "link",
        },
        Object {
          "id": "hello",
          "type": "ref",
        },
      ],
      "label": "Test",
      "type": "category",
    },
    Object {
      "collapsed": true,
      "items": Array [
        Object {
          "id": "hello",
          "type": "doc",
        },
      ],
      "label": "Guides",
      "type": "category",
    },
  ],
}
`;

exports[`simple website content 2`] = `
Object {
  "pluginName": Object {
    "pluginId": Object {
      "path": "/docs",
      "versions": Array [
        Object {
          "docs": Array [
            Object {
              "id": "foo/bar",
              "path": "/docs/foo/bar",
              "sidebar": "docs",
            },
            Object {
              "id": "foo/baz",
              "path": "/docs/foo/bazSlug.html",
              "sidebar": "docs",
            },
            Object {
              "id": "hello",
              "path": "/docs/",
              "sidebar": "docs",
            },
            Object {
              "id": "ipsum",
              "path": "/docs/ipsum",
              "sidebar": undefined,
            },
            Object {
              "id": "lorem",
              "path": "/docs/lorem",
              "sidebar": undefined,
            },
            Object {
              "id": "rootAbsoluteSlug",
              "path": "/docs/rootAbsoluteSlug",
              "sidebar": undefined,
            },
            Object {
              "id": "rootRelativeSlug",
              "path": "/docs/rootRelativeSlug",
              "sidebar": undefined,
            },
            Object {
              "id": "rootResolvedSlug",
              "path": "/docs/hey/rootResolvedSlug",
              "sidebar": undefined,
            },
            Object {
              "id": "rootTryToEscapeSlug",
              "path": "/docs/rootTryToEscapeSlug",
              "sidebar": undefined,
            },
            Object {
              "id": "slugs/absoluteSlug",
              "path": "/docs/absoluteSlug",
              "sidebar": undefined,
            },
            Object {
              "id": "slugs/relativeSlug",
              "path": "/docs/slugs/relativeSlug",
              "sidebar": undefined,
            },
            Object {
              "id": "slugs/resolvedSlug",
              "path": "/docs/slugs/hey/resolvedSlug",
              "sidebar": undefined,
            },
            Object {
              "id": "slugs/tryToEscapeSlug",
              "path": "/docs/tryToEscapeSlug",
              "sidebar": undefined,
            },
          ],
          "isLast": true,
          "label": "Next",
          "mainDocId": "hello",
          "name": "current",
          "path": "/docs",
        },
      ],
    },
  },
}
`;

exports[`simple website content: data 1`] = `
Object {
  "doc-current-foo-bar-79e.json": "{
  \\"unversionedId\\": \\"foo/bar\\",
  \\"id\\": \\"foo/bar\\",
  \\"isDocsHomePage\\": false,
  \\"title\\": \\"Bar\\",
  \\"description\\": \\"This is custom description\\",
  \\"source\\": \\"@site/docs/foo/bar.md\\",
  \\"slug\\": \\"/foo/bar\\",
  \\"permalink\\": \\"/docs/foo/bar\\",
  \\"version\\": \\"current\\",
  \\"sidebar\\": \\"docs\\",
  \\"next\\": {
    \\"title\\": \\"baz\\",
    \\"permalink\\": \\"/docs/foo/bazSlug.html\\"
  }
}",
  "doc-current-foo-baz-3b8.json": "{
  \\"unversionedId\\": \\"foo/baz\\",
  \\"id\\": \\"foo/baz\\",
  \\"isDocsHomePage\\": false,
  \\"title\\": \\"baz\\",
  \\"description\\": \\"Images\\",
  \\"source\\": \\"@site/docs/foo/baz.md\\",
  \\"slug\\": \\"/foo/bazSlug.html\\",
  \\"permalink\\": \\"/docs/foo/bazSlug.html\\",
  \\"version\\": \\"current\\",
  \\"sidebar\\": \\"docs\\",
  \\"previous\\": {
    \\"title\\": \\"Bar\\",
    \\"permalink\\": \\"/docs/foo/bar\\"
  },
  \\"next\\": {
    \\"title\\": \\"Hello, World !\\",
    \\"permalink\\": \\"/docs/\\"
  }
}",
  "doc-current-hello-56d.json": "{
  \\"unversionedId\\": \\"hello\\",
  \\"id\\": \\"hello\\",
  \\"isDocsHomePage\\": true,
  \\"title\\": \\"Hello, World !\\",
  \\"description\\": \\"Hi, Endilie here :)\\",
  \\"source\\": \\"@site/docs/hello.md\\",
  \\"slug\\": \\"/\\",
  \\"permalink\\": \\"/docs/\\",
  \\"version\\": \\"current\\",
  \\"sidebar\\": \\"docs\\",
  \\"previous\\": {
    \\"title\\": \\"baz\\",
    \\"permalink\\": \\"/docs/foo/bazSlug.html\\"
  }
}",
  "doc-current-ipsum-418.json": "{
  \\"unversionedId\\": \\"ipsum\\",
  \\"id\\": \\"ipsum\\",
  \\"isDocsHomePage\\": false,
  \\"title\\": \\"ipsum\\",
  \\"description\\": \\"Lorem ipsum.\\",
  \\"source\\": \\"@site/docs/ipsum.md\\",
  \\"slug\\": \\"/ipsum\\",
  \\"permalink\\": \\"/docs/ipsum\\",
  \\"editUrl\\": null,
  \\"version\\": \\"current\\"
}",
  "doc-current-lorem-171.json": "{
  \\"unversionedId\\": \\"lorem\\",
  \\"id\\": \\"lorem\\",
  \\"isDocsHomePage\\": false,
  \\"title\\": \\"lorem\\",
  \\"description\\": \\"Lorem ipsum.\\",
  \\"source\\": \\"@site/docs/lorem.md\\",
  \\"slug\\": \\"/lorem\\",
  \\"permalink\\": \\"/docs/lorem\\",
  \\"editUrl\\": \\"https://github.com/customUrl/docs/lorem.md\\",
  \\"version\\": \\"current\\"
}",
  "doc-current-root-absolute-slug-8c4.json": "{
  \\"unversionedId\\": \\"rootAbsoluteSlug\\",
  \\"id\\": \\"rootAbsoluteSlug\\",
  \\"isDocsHomePage\\": false,
  \\"title\\": \\"rootAbsoluteSlug\\",
  \\"description\\": \\"Lorem\\",
  \\"source\\": \\"@site/docs/rootAbsoluteSlug.md\\",
  \\"slug\\": \\"/rootAbsoluteSlug\\",
  \\"permalink\\": \\"/docs/rootAbsoluteSlug\\",
  \\"version\\": \\"current\\"
}",
  "doc-current-root-relative-slug-a37.json": "{
  \\"unversionedId\\": \\"rootRelativeSlug\\",
  \\"id\\": \\"rootRelativeSlug\\",
  \\"isDocsHomePage\\": false,
  \\"title\\": \\"rootRelativeSlug\\",
  \\"description\\": \\"Lorem\\",
  \\"source\\": \\"@site/docs/rootRelativeSlug.md\\",
  \\"slug\\": \\"/rootRelativeSlug\\",
  \\"permalink\\": \\"/docs/rootRelativeSlug\\",
  \\"version\\": \\"current\\"
}",
  "doc-current-root-resolved-slug-567.json": "{
  \\"unversionedId\\": \\"rootResolvedSlug\\",
  \\"id\\": \\"rootResolvedSlug\\",
  \\"isDocsHomePage\\": false,
  \\"title\\": \\"rootResolvedSlug\\",
  \\"description\\": \\"Lorem\\",
  \\"source\\": \\"@site/docs/rootResolvedSlug.md\\",
  \\"slug\\": \\"/hey/rootResolvedSlug\\",
  \\"permalink\\": \\"/docs/hey/rootResolvedSlug\\",
  \\"version\\": \\"current\\"
}",
  "doc-current-root-try-to-escape-slug-1eb.json": "{
  \\"unversionedId\\": \\"rootTryToEscapeSlug\\",
  \\"id\\": \\"rootTryToEscapeSlug\\",
  \\"isDocsHomePage\\": false,
  \\"title\\": \\"rootTryToEscapeSlug\\",
  \\"description\\": \\"Lorem\\",
  \\"source\\": \\"@site/docs/rootTryToEscapeSlug.md\\",
  \\"slug\\": \\"/rootTryToEscapeSlug\\",
  \\"permalink\\": \\"/docs/rootTryToEscapeSlug\\",
  \\"version\\": \\"current\\"
}",
  "doc-current-slugs-absolute-slug-752.json": "{
  \\"unversionedId\\": \\"slugs/absoluteSlug\\",
  \\"id\\": \\"slugs/absoluteSlug\\",
  \\"isDocsHomePage\\": false,
  \\"title\\": \\"absoluteSlug\\",
  \\"description\\": \\"Lorem\\",
  \\"source\\": \\"@site/docs/slugs/absoluteSlug.md\\",
  \\"slug\\": \\"/absoluteSlug\\",
  \\"permalink\\": \\"/docs/absoluteSlug\\",
  \\"version\\": \\"current\\"
}",
  "doc-current-slugs-relative-slug-c86.json": "{
  \\"unversionedId\\": \\"slugs/relativeSlug\\",
  \\"id\\": \\"slugs/relativeSlug\\",
  \\"isDocsHomePage\\": false,
  \\"title\\": \\"relativeSlug\\",
  \\"description\\": \\"Lorem\\",
  \\"source\\": \\"@site/docs/slugs/relativeSlug.md\\",
  \\"slug\\": \\"/slugs/relativeSlug\\",
  \\"permalink\\": \\"/docs/slugs/relativeSlug\\",
  \\"version\\": \\"current\\"
}",
  "doc-current-slugs-resolved-slug-1e3.json": "{
  \\"unversionedId\\": \\"slugs/resolvedSlug\\",
  \\"id\\": \\"slugs/resolvedSlug\\",
  \\"isDocsHomePage\\": false,
  \\"title\\": \\"resolvedSlug\\",
  \\"description\\": \\"Lorem\\",
  \\"source\\": \\"@site/docs/slugs/resolvedSlug.md\\",
  \\"slug\\": \\"/slugs/hey/resolvedSlug\\",
  \\"permalink\\": \\"/docs/slugs/hey/resolvedSlug\\",
  \\"version\\": \\"current\\"
}",
  "doc-current-slugs-try-to-escape-slug-a96.json": "{
  \\"unversionedId\\": \\"slugs/tryToEscapeSlug\\",
  \\"id\\": \\"slugs/tryToEscapeSlug\\",
  \\"isDocsHomePage\\": false,
  \\"title\\": \\"tryToEscapeSlug\\",
  \\"description\\": \\"Lorem\\",
  \\"source\\": \\"@site/docs/slugs/tryToEscapeSlug.md\\",
  \\"slug\\": \\"/tryToEscapeSlug\\",
  \\"permalink\\": \\"/docs/tryToEscapeSlug\\",
  \\"version\\": \\"current\\"
}",
  "version-current-6f8.json": "{
  \\"pluginId\\": \\"default\\",
  \\"version\\": \\"current\\",
  \\"label\\": \\"Next\\",
  \\"isLast\\": true,
  \\"docsSidebars\\": {
    \\"docs\\": [
      {
        \\"collapsed\\": true,
        \\"type\\": \\"category\\",
        \\"label\\": \\"Test\\",
        \\"items\\": [
          {
            \\"collapsed\\": true,
            \\"type\\": \\"category\\",
            \\"label\\": \\"foo\\",
            \\"items\\": [
              {
                \\"type\\": \\"link\\",
                \\"label\\": \\"Bar\\",
                \\"href\\": \\"/docs/foo/bar\\"
              },
              {
                \\"type\\": \\"link\\",
                \\"label\\": \\"baz\\",
                \\"href\\": \\"/docs/foo/bazSlug.html\\"
              }
            ]
          },
          {
            \\"type\\": \\"link\\",
            \\"label\\": \\"Github\\",
            \\"href\\": \\"https://github.com\\"
          },
          {
            \\"type\\": \\"link\\",
            \\"label\\": \\"Hello, World !\\",
            \\"href\\": \\"/docs/\\"
          }
        ]
      },
      {
        \\"collapsed\\": true,
        \\"type\\": \\"category\\",
        \\"label\\": \\"Guides\\",
        \\"items\\": [
          {
            \\"type\\": \\"link\\",
            \\"label\\": \\"Hello, World !\\",
            \\"href\\": \\"/docs/\\"
          }
        ]
      }
    ]
  },
  \\"permalinkToSidebar\\": {
    \\"/docs/foo/bar\\": \\"docs\\",
    \\"/docs/foo/bazSlug.html\\": \\"docs\\",
    \\"/docs/\\": \\"docs\\"
  }
}",
}
`;

exports[`simple website content: global data 1`] = `
Object {
  "pluginName": Object {
    "pluginId": Object {
      "path": "/docs",
      "versions": Array [
        Object {
          "docs": Array [
            Object {
              "id": "foo/bar",
              "path": "/docs/foo/bar",
              "sidebar": "docs",
            },
            Object {
              "id": "foo/baz",
              "path": "/docs/foo/bazSlug.html",
              "sidebar": "docs",
            },
            Object {
              "id": "hello",
              "path": "/docs/",
              "sidebar": "docs",
            },
            Object {
              "id": "ipsum",
              "path": "/docs/ipsum",
              "sidebar": undefined,
            },
            Object {
              "id": "lorem",
              "path": "/docs/lorem",
              "sidebar": undefined,
            },
            Object {
              "id": "rootAbsoluteSlug",
              "path": "/docs/rootAbsoluteSlug",
              "sidebar": undefined,
            },
            Object {
              "id": "rootRelativeSlug",
              "path": "/docs/rootRelativeSlug",
              "sidebar": undefined,
            },
            Object {
              "id": "rootResolvedSlug",
              "path": "/docs/hey/rootResolvedSlug",
              "sidebar": undefined,
            },
            Object {
              "id": "rootTryToEscapeSlug",
              "path": "/docs/rootTryToEscapeSlug",
              "sidebar": undefined,
            },
            Object {
              "id": "slugs/absoluteSlug",
              "path": "/docs/absoluteSlug",
              "sidebar": undefined,
            },
            Object {
              "id": "slugs/relativeSlug",
              "path": "/docs/slugs/relativeSlug",
              "sidebar": undefined,
            },
            Object {
              "id": "slugs/resolvedSlug",
              "path": "/docs/slugs/hey/resolvedSlug",
              "sidebar": undefined,
            },
            Object {
              "id": "slugs/tryToEscapeSlug",
              "path": "/docs/tryToEscapeSlug",
              "sidebar": undefined,
            },
          ],
          "isLast": true,
          "label": "Next",
          "mainDocId": "hello",
          "name": "current",
          "path": "/docs",
        },
      ],
    },
  },
}
`;

exports[`simple website content: route config 1`] = `
Array [
  Object {
    "component": "@theme/DocPage",
    "exact": false,
    "modules": Object {
      "versionMetadata": "~docs/version-current-6f8.json",
    },
    "path": "/docs",
    "priority": -1,
    "routes": Array [
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "~docs/doc-current-hello-56d.json",
        },
        "path": "/docs/",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "~docs/doc-current-slugs-absolute-slug-752.json",
        },
        "path": "/docs/absoluteSlug",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "~docs/doc-current-foo-bar-79e.json",
        },
        "path": "/docs/foo/bar",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "~docs/doc-current-foo-baz-3b8.json",
        },
        "path": "/docs/foo/bazSlug.html",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "~docs/doc-current-root-resolved-slug-567.json",
        },
        "path": "/docs/hey/rootResolvedSlug",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "~docs/doc-current-ipsum-418.json",
        },
        "path": "/docs/ipsum",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "~docs/doc-current-lorem-171.json",
        },
        "path": "/docs/lorem",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "~docs/doc-current-root-absolute-slug-8c4.json",
        },
        "path": "/docs/rootAbsoluteSlug",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "~docs/doc-current-root-relative-slug-a37.json",
        },
        "path": "/docs/rootRelativeSlug",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "~docs/doc-current-root-try-to-escape-slug-1eb.json",
        },
        "path": "/docs/rootTryToEscapeSlug",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "~docs/doc-current-slugs-resolved-slug-1e3.json",
        },
        "path": "/docs/slugs/hey/resolvedSlug",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "~docs/doc-current-slugs-relative-slug-c86.json",
        },
        "path": "/docs/slugs/relativeSlug",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "~docs/doc-current-slugs-try-to-escape-slug-a96.json",
        },
        "path": "/docs/tryToEscapeSlug",
      },
    ],
  },
]
`;

exports[`site with wrong sidebar file 1`] = `
"Bad sidebars file.
These sidebar document ids do not exist:
- goku,

Available document ids=
- foo/bar
- foo/baz
- hello
- ipsum
- lorem
- rootAbsoluteSlug
- rootRelativeSlug
- rootResolvedSlug
- rootTryToEscapeSlug
- slugs/absoluteSlug
- slugs/relativeSlug
- slugs/resolvedSlug
- slugs/tryToEscapeSlug"
`;

exports[`versioned website (community) content: 100 version sidebars 1`] = `
Object {
  "version-1.0.0/community": Array [
    Object {
      "id": "version-1.0.0/team",
      "type": "doc",
    },
  ],
}
`;

exports[`versioned website (community) content: current version sidebars 1`] = `
Object {
  "community": Array [
    Object {
      "id": "team",
      "type": "doc",
    },
  ],
}
`;

exports[`versioned website (community) content: data 1`] = `
Object {
  "doc-1-0-0-team-0e8.json": "{
  \\"unversionedId\\": \\"team\\",
  \\"id\\": \\"version-1.0.0/team\\",
  \\"isDocsHomePage\\": false,
  \\"title\\": \\"team\\",
  \\"description\\": \\"Team 1.0.0\\",
  \\"source\\": \\"@site/community_versioned_docs/version-1.0.0/team.md\\",
  \\"slug\\": \\"/team\\",
  \\"permalink\\": \\"/community/team\\",
  \\"version\\": \\"1.0.0\\",
  \\"sidebar\\": \\"version-1.0.0/community\\"
}",
  "doc-current-team-2db.json": "{
  \\"unversionedId\\": \\"team\\",
  \\"id\\": \\"team\\",
  \\"isDocsHomePage\\": false,
  \\"title\\": \\"Team title translated\\",
  \\"description\\": \\"Team current version (translated)\\",
  \\"source\\": \\"@site/i18n/en/docusaurus-plugin-content-docs-community/current/team.md\\",
  \\"slug\\": \\"/team\\",
  \\"permalink\\": \\"/community/next/team\\",
  \\"version\\": \\"current\\",
  \\"sidebar\\": \\"community\\"
}",
  "version-1-0-0-0ad.json": "{
  \\"pluginId\\": \\"community\\",
  \\"version\\": \\"1.0.0\\",
  \\"label\\": \\"1.0.0\\",
  \\"isLast\\": true,
  \\"docsSidebars\\": {
    \\"version-1.0.0/community\\": [
      {
        \\"type\\": \\"link\\",
        \\"label\\": \\"team\\",
        \\"href\\": \\"/community/team\\"
      }
    ]
  },
  \\"permalinkToSidebar\\": {
    \\"/community/team\\": \\"version-1.0.0/community\\"
  }
}",
  "version-current-6f8.json": "{
  \\"pluginId\\": \\"community\\",
  \\"version\\": \\"current\\",
  \\"label\\": \\"Next\\",
  \\"isLast\\": false,
  \\"docsSidebars\\": {
    \\"community\\": [
      {
        \\"type\\": \\"link\\",
        \\"label\\": \\"Team title translated\\",
        \\"href\\": \\"/community/next/team\\"
      }
    ]
  },
  \\"permalinkToSidebar\\": {
    \\"/community/next/team\\": \\"community\\"
  }
}",
}
`;

exports[`versioned website (community) content: global data 1`] = `
Object {
  "pluginName": Object {
    "pluginId": Object {
      "path": "/community",
      "versions": Array [
        Object {
          "docs": Array [
            Object {
              "id": "team",
              "path": "/community/next/team",
              "sidebar": "community",
            },
          ],
          "isLast": false,
          "label": "Next",
          "mainDocId": "team",
          "name": "current",
          "path": "/community/next",
        },
        Object {
          "docs": Array [
            Object {
              "id": "team",
              "path": "/community/team",
              "sidebar": "version-1.0.0/community",
            },
          ],
          "isLast": true,
          "label": "1.0.0",
          "mainDocId": "team",
          "name": "1.0.0",
          "path": "/community",
        },
      ],
    },
  },
}
`;

exports[`versioned website (community) content: route config 1`] = `
Array [
  Object {
    "component": "@theme/DocPage",
    "exact": false,
    "modules": Object {
      "versionMetadata": "~docs/version-current-6f8.json",
    },
    "path": "/community/next",
    "priority": undefined,
    "routes": Array [
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "~docs/doc-current-team-2db.json",
        },
        "path": "/community/next/team",
      },
    ],
  },
  Object {
    "component": "@theme/DocPage",
    "exact": false,
    "modules": Object {
      "versionMetadata": "~docs/version-1-0-0-0ad.json",
    },
    "path": "/community",
    "priority": -1,
    "routes": Array [
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "~docs/doc-1-0-0-team-0e8.json",
        },
        "path": "/community/team",
      },
    ],
  },
]
`;

exports[`versioned website content: 100 version sidebars 1`] = `
Object {
  "version-1.0.0/docs": Array [
    Object {
      "collapsed": true,
      "items": Array [
        Object {
          "id": "version-1.0.0/foo/bar",
          "type": "doc",
        },
        Object {
          "id": "version-1.0.0/foo/baz",
          "type": "doc",
        },
      ],
      "label": "Test",
      "type": "category",
    },
    Object {
      "collapsed": true,
      "items": Array [
        Object {
          "id": "version-1.0.0/hello",
          "type": "doc",
        },
      ],
      "label": "Guides",
      "type": "category",
    },
  ],
}
`;

exports[`versioned website content: 101 version sidebars 1`] = `
Object {
  "version-1.0.1/docs": Array [
    Object {
      "collapsed": true,
      "items": Array [
        Object {
          "id": "version-1.0.1/foo/bar",
          "type": "doc",
        },
      ],
      "label": "Test",
      "type": "category",
    },
    Object {
      "collapsed": true,
      "items": Array [
        Object {
          "id": "version-1.0.1/hello",
          "type": "doc",
        },
      ],
      "label": "Guides",
      "type": "category",
    },
  ],
}
`;

exports[`versioned website content: current version sidebars 1`] = `
Object {
  "docs": Array [
    Object {
      "collapsed": true,
      "items": Array [
        Object {
          "id": "foo/bar",
          "type": "doc",
        },
      ],
      "label": "Test",
      "type": "category",
    },
    Object {
      "collapsed": true,
      "items": Array [
        Object {
          "id": "hello",
          "type": "doc",
        },
      ],
      "label": "Guides",
      "type": "category",
    },
  ],
}
`;

exports[`versioned website content: data 1`] = `
Object {
  "doc-1-0-0-foo-bar-05d.json": "{
  \\"unversionedId\\": \\"foo/bar\\",
  \\"id\\": \\"version-1.0.0/foo/bar\\",
  \\"isDocsHomePage\\": false,
  \\"title\\": \\"bar\\",
  \\"description\\": \\"Bar 1.0.0 !\\",
  \\"source\\": \\"@site/versioned_docs/version-1.0.0/foo/bar.md\\",
  \\"slug\\": \\"/foo/barSlug\\",
  \\"permalink\\": \\"/docs/1.0.0/foo/barSlug\\",
  \\"version\\": \\"1.0.0\\",
  \\"sidebar\\": \\"version-1.0.0/docs\\",
  \\"next\\": {
    \\"title\\": \\"baz\\",
    \\"permalink\\": \\"/docs/1.0.0/foo/baz\\"
  }
}",
  "doc-1-0-0-foo-baz-b23.json": "{
  \\"unversionedId\\": \\"foo/baz\\",
  \\"id\\": \\"version-1.0.0/foo/baz\\",
  \\"isDocsHomePage\\": false,
  \\"title\\": \\"baz\\",
  \\"description\\": \\"Baz 1.0.0 ! This will be deleted in next subsequent versions.\\",
  \\"source\\": \\"@site/versioned_docs/version-1.0.0/foo/baz.md\\",
  \\"slug\\": \\"/foo/baz\\",
  \\"permalink\\": \\"/docs/1.0.0/foo/baz\\",
  \\"version\\": \\"1.0.0\\",
  \\"sidebar\\": \\"version-1.0.0/docs\\",
  \\"previous\\": {
    \\"title\\": \\"bar\\",
    \\"permalink\\": \\"/docs/1.0.0/foo/barSlug\\"
  },
  \\"next\\": {
    \\"title\\": \\"hello\\",
    \\"permalink\\": \\"/docs/1.0.0/\\"
  }
}",
  "doc-1-0-0-hello-d36.json": "{
  \\"unversionedId\\": \\"hello\\",
  \\"id\\": \\"version-1.0.0/hello\\",
  \\"isDocsHomePage\\": true,
  \\"title\\": \\"hello\\",
  \\"description\\": \\"Hello 1.0.0 ! (translated en)\\",
  \\"source\\": \\"@site/i18n/en/docusaurus-plugin-content-docs/version-1.0.0/hello.md\\",
  \\"slug\\": \\"/\\",
  \\"permalink\\": \\"/docs/1.0.0/\\",
  \\"version\\": \\"1.0.0\\",
  \\"sidebar\\": \\"version-1.0.0/docs\\",
  \\"previous\\": {
    \\"title\\": \\"baz\\",
    \\"permalink\\": \\"/docs/1.0.0/foo/baz\\"
  }
}",
  "doc-1-0-1-foo-bar-46d.json": "{
  \\"unversionedId\\": \\"foo/bar\\",
  \\"id\\": \\"version-1.0.1/foo/bar\\",
  \\"isDocsHomePage\\": false,
  \\"title\\": \\"bar\\",
  \\"description\\": \\"Bar 1.0.1 !\\",
  \\"source\\": \\"@site/versioned_docs/version-1.0.1/foo/bar.md\\",
  \\"slug\\": \\"/foo/bar\\",
  \\"permalink\\": \\"/docs/foo/bar\\",
  \\"version\\": \\"1.0.1\\",
  \\"sidebar\\": \\"version-1.0.1/docs\\",
  \\"next\\": {
    \\"title\\": \\"hello\\",
    \\"permalink\\": \\"/docs/\\"
  }
}",
  "doc-1-0-1-hello-131.json": "{
  \\"unversionedId\\": \\"hello\\",
  \\"id\\": \\"version-1.0.1/hello\\",
  \\"isDocsHomePage\\": true,
  \\"title\\": \\"hello\\",
  \\"description\\": \\"Hello 1.0.1 !\\",
  \\"source\\": \\"@site/versioned_docs/version-1.0.1/hello.md\\",
  \\"slug\\": \\"/\\",
  \\"permalink\\": \\"/docs/\\",
  \\"version\\": \\"1.0.1\\",
  \\"sidebar\\": \\"version-1.0.1/docs\\",
  \\"previous\\": {
    \\"title\\": \\"bar\\",
    \\"permalink\\": \\"/docs/foo/bar\\"
  }
}",
  "doc-current-foo-bar-79e.json": "{
  \\"unversionedId\\": \\"foo/bar\\",
  \\"id\\": \\"foo/bar\\",
  \\"isDocsHomePage\\": false,
  \\"title\\": \\"bar\\",
  \\"description\\": \\"This is next version of bar.\\",
  \\"source\\": \\"@site/docs/foo/bar.md\\",
  \\"slug\\": \\"/foo/barSlug\\",
  \\"permalink\\": \\"/docs/next/foo/barSlug\\",
  \\"version\\": \\"current\\",
  \\"sidebar\\": \\"docs\\",
  \\"next\\": {
    \\"title\\": \\"hello\\",
    \\"permalink\\": \\"/docs/next/\\"
  }
}",
  "doc-current-hello-56d.json": "{
  \\"unversionedId\\": \\"hello\\",
  \\"id\\": \\"hello\\",
  \\"isDocsHomePage\\": true,
  \\"title\\": \\"hello\\",
  \\"description\\": \\"Hello next !\\",
  \\"source\\": \\"@site/docs/hello.md\\",
  \\"slug\\": \\"/\\",
  \\"permalink\\": \\"/docs/next/\\",
  \\"version\\": \\"current\\",
  \\"sidebar\\": \\"docs\\",
  \\"previous\\": {
    \\"title\\": \\"bar\\",
    \\"permalink\\": \\"/docs/next/foo/barSlug\\"
  }
}",
  "doc-current-slugs-absolute-slug-752.json": "{
  \\"unversionedId\\": \\"slugs/absoluteSlug\\",
  \\"id\\": \\"slugs/absoluteSlug\\",
  \\"isDocsHomePage\\": false,
  \\"title\\": \\"absoluteSlug\\",
  \\"description\\": \\"Lorem\\",
  \\"source\\": \\"@site/docs/slugs/absoluteSlug.md\\",
  \\"slug\\": \\"/absoluteSlug\\",
  \\"permalink\\": \\"/docs/next/absoluteSlug\\",
  \\"version\\": \\"current\\"
}",
  "doc-current-slugs-relative-slug-c86.json": "{
  \\"unversionedId\\": \\"slugs/relativeSlug\\",
  \\"id\\": \\"slugs/relativeSlug\\",
  \\"isDocsHomePage\\": false,
  \\"title\\": \\"relativeSlug\\",
  \\"description\\": \\"Lorem\\",
  \\"source\\": \\"@site/docs/slugs/relativeSlug.md\\",
  \\"slug\\": \\"/slugs/relativeSlug\\",
  \\"permalink\\": \\"/docs/next/slugs/relativeSlug\\",
  \\"version\\": \\"current\\"
}",
  "doc-current-slugs-resolved-slug-1e3.json": "{
  \\"unversionedId\\": \\"slugs/resolvedSlug\\",
  \\"id\\": \\"slugs/resolvedSlug\\",
  \\"isDocsHomePage\\": false,
  \\"title\\": \\"resolvedSlug\\",
  \\"description\\": \\"Lorem\\",
  \\"source\\": \\"@site/docs/slugs/resolvedSlug.md\\",
  \\"slug\\": \\"/slugs/hey/resolvedSlug\\",
  \\"permalink\\": \\"/docs/next/slugs/hey/resolvedSlug\\",
  \\"version\\": \\"current\\"
}",
  "doc-current-slugs-try-to-escape-slug-a96.json": "{
  \\"unversionedId\\": \\"slugs/tryToEscapeSlug\\",
  \\"id\\": \\"slugs/tryToEscapeSlug\\",
  \\"isDocsHomePage\\": false,
  \\"title\\": \\"tryToEscapeSlug\\",
  \\"description\\": \\"Lorem\\",
  \\"source\\": \\"@site/docs/slugs/tryToEscapeSlug.md\\",
  \\"slug\\": \\"/tryToEscapeSlug\\",
  \\"permalink\\": \\"/docs/next/tryToEscapeSlug\\",
  \\"version\\": \\"current\\"
}",
  "doc-with-slugs-root-absolute-slug-06f.json": "{
  \\"unversionedId\\": \\"rootAbsoluteSlug\\",
  \\"id\\": \\"version-withSlugs/rootAbsoluteSlug\\",
  \\"isDocsHomePage\\": false,
  \\"title\\": \\"rootAbsoluteSlug\\",
  \\"description\\": \\"Lorem\\",
  \\"source\\": \\"@site/versioned_docs/version-withSlugs/rootAbsoluteSlug.md\\",
  \\"slug\\": \\"/rootAbsoluteSlug\\",
  \\"permalink\\": \\"/docs/withSlugs/rootAbsoluteSlug\\",
  \\"version\\": \\"withSlugs\\",
  \\"sidebar\\": \\"version-1.0.1/docs\\"
}",
  "doc-with-slugs-root-relative-slug-4c6.json": "{
  \\"unversionedId\\": \\"rootRelativeSlug\\",
  \\"id\\": \\"version-withSlugs/rootRelativeSlug\\",
  \\"isDocsHomePage\\": false,
  \\"title\\": \\"rootRelativeSlug\\",
  \\"description\\": \\"Lorem\\",
  \\"source\\": \\"@site/versioned_docs/version-withSlugs/rootRelativeSlug.md\\",
  \\"slug\\": \\"/rootRelativeSlug\\",
  \\"permalink\\": \\"/docs/withSlugs/rootRelativeSlug\\",
  \\"version\\": \\"withSlugs\\"
}",
  "doc-with-slugs-root-resolved-slug-6a9.json": "{
  \\"unversionedId\\": \\"rootResolvedSlug\\",
  \\"id\\": \\"version-withSlugs/rootResolvedSlug\\",
  \\"isDocsHomePage\\": false,
  \\"title\\": \\"rootResolvedSlug\\",
  \\"description\\": \\"Lorem\\",
  \\"source\\": \\"@site/versioned_docs/version-withSlugs/rootResolvedSlug.md\\",
  \\"slug\\": \\"/hey/rootResolvedSlug\\",
  \\"permalink\\": \\"/docs/withSlugs/hey/rootResolvedSlug\\",
  \\"version\\": \\"withSlugs\\"
}",
  "doc-with-slugs-root-try-to-escape-slug-b45.json": "{
  \\"unversionedId\\": \\"rootTryToEscapeSlug\\",
  \\"id\\": \\"version-withSlugs/rootTryToEscapeSlug\\",
  \\"isDocsHomePage\\": false,
  \\"title\\": \\"rootTryToEscapeSlug\\",
  \\"description\\": \\"Lorem\\",
  \\"source\\": \\"@site/versioned_docs/version-withSlugs/rootTryToEscapeSlug.md\\",
  \\"slug\\": \\"/rootTryToEscapeSlug\\",
  \\"permalink\\": \\"/docs/withSlugs/rootTryToEscapeSlug\\",
  \\"version\\": \\"withSlugs\\"
}",
  "doc-with-slugs-slugs-absolute-slug-540.json": "{
  \\"unversionedId\\": \\"slugs/absoluteSlug\\",
  \\"id\\": \\"version-withSlugs/slugs/absoluteSlug\\",
  \\"isDocsHomePage\\": false,
  \\"title\\": \\"absoluteSlug\\",
  \\"description\\": \\"Lorem\\",
  \\"source\\": \\"@site/versioned_docs/version-withSlugs/slugs/absoluteSlug.md\\",
  \\"slug\\": \\"/absoluteSlug\\",
  \\"permalink\\": \\"/docs/withSlugs/absoluteSlug\\",
  \\"version\\": \\"withSlugs\\"
}",
  "doc-with-slugs-slugs-relative-slug-d52.json": "{
  \\"unversionedId\\": \\"slugs/relativeSlug\\",
  \\"id\\": \\"version-withSlugs/slugs/relativeSlug\\",
  \\"isDocsHomePage\\": false,
  \\"title\\": \\"relativeSlug\\",
  \\"description\\": \\"Lorem\\",
  \\"source\\": \\"@site/versioned_docs/version-withSlugs/slugs/relativeSlug.md\\",
  \\"slug\\": \\"/slugs/relativeSlug\\",
  \\"permalink\\": \\"/docs/withSlugs/slugs/relativeSlug\\",
  \\"version\\": \\"withSlugs\\"
}",
  "doc-with-slugs-slugs-resolved-slug-53a.json": "{
  \\"unversionedId\\": \\"slugs/resolvedSlug\\",
  \\"id\\": \\"version-withSlugs/slugs/resolvedSlug\\",
  \\"isDocsHomePage\\": false,
  \\"title\\": \\"resolvedSlug\\",
  \\"description\\": \\"Lorem\\",
  \\"source\\": \\"@site/versioned_docs/version-withSlugs/slugs/resolvedSlug.md\\",
  \\"slug\\": \\"/slugs/hey/resolvedSlug\\",
  \\"permalink\\": \\"/docs/withSlugs/slugs/hey/resolvedSlug\\",
  \\"version\\": \\"withSlugs\\"
}",
  "doc-with-slugs-slugs-try-to-escape-slug-42a.json": "{
  \\"unversionedId\\": \\"slugs/tryToEscapeSlug\\",
  \\"id\\": \\"version-withSlugs/slugs/tryToEscapeSlug\\",
  \\"isDocsHomePage\\": false,
  \\"title\\": \\"tryToEscapeSlug\\",
  \\"description\\": \\"Lorem\\",
  \\"source\\": \\"@site/versioned_docs/version-withSlugs/slugs/tryToEscapeSlug.md\\",
  \\"slug\\": \\"/tryToEscapeSlug\\",
  \\"permalink\\": \\"/docs/withSlugs/tryToEscapeSlug\\",
  \\"version\\": \\"withSlugs\\"
}",
  "version-1-0-0-0ad.json": "{
  \\"pluginId\\": \\"default\\",
  \\"version\\": \\"1.0.0\\",
  \\"label\\": \\"1.0.0\\",
  \\"isLast\\": false,
  \\"docsSidebars\\": {
    \\"version-1.0.0/docs\\": [
      {
        \\"collapsed\\": true,
        \\"type\\": \\"category\\",
        \\"label\\": \\"Test\\",
        \\"items\\": [
          {
            \\"type\\": \\"link\\",
            \\"label\\": \\"bar\\",
            \\"href\\": \\"/docs/1.0.0/foo/barSlug\\"
          },
          {
            \\"type\\": \\"link\\",
            \\"label\\": \\"baz\\",
            \\"href\\": \\"/docs/1.0.0/foo/baz\\"
          }
        ]
      },
      {
        \\"collapsed\\": true,
        \\"type\\": \\"category\\",
        \\"label\\": \\"Guides\\",
        \\"items\\": [
          {
            \\"type\\": \\"link\\",
            \\"label\\": \\"hello\\",
            \\"href\\": \\"/docs/1.0.0/\\"
          }
        ]
      }
    ]
  },
  \\"permalinkToSidebar\\": {
    \\"/docs/1.0.0/foo/barSlug\\": \\"version-1.0.0/docs\\",
    \\"/docs/1.0.0/foo/baz\\": \\"version-1.0.0/docs\\",
    \\"/docs/1.0.0/\\": \\"version-1.0.0/docs\\"
  }
}",
  "version-1-0-1-1fb.json": "{
  \\"pluginId\\": \\"default\\",
  \\"version\\": \\"1.0.1\\",
  \\"label\\": \\"1.0.1\\",
  \\"isLast\\": true,
  \\"docsSidebars\\": {
    \\"version-1.0.1/docs\\": [
      {
        \\"collapsed\\": true,
        \\"type\\": \\"category\\",
        \\"label\\": \\"Test\\",
        \\"items\\": [
          {
            \\"type\\": \\"link\\",
            \\"label\\": \\"bar\\",
            \\"href\\": \\"/docs/foo/bar\\"
          }
        ]
      },
      {
        \\"collapsed\\": true,
        \\"type\\": \\"category\\",
        \\"label\\": \\"Guides\\",
        \\"items\\": [
          {
            \\"type\\": \\"link\\",
            \\"label\\": \\"hello\\",
            \\"href\\": \\"/docs/\\"
          }
        ]
      }
    ]
  },
  \\"permalinkToSidebar\\": {
    \\"/docs/foo/bar\\": \\"version-1.0.1/docs\\",
    \\"/docs/\\": \\"version-1.0.1/docs\\"
  }
}",
  "version-current-6f8.json": "{
  \\"pluginId\\": \\"default\\",
  \\"version\\": \\"current\\",
  \\"label\\": \\"Next\\",
  \\"isLast\\": false,
  \\"docsSidebars\\": {
    \\"docs\\": [
      {
        \\"collapsed\\": true,
        \\"type\\": \\"category\\",
        \\"label\\": \\"Test\\",
        \\"items\\": [
          {
            \\"type\\": \\"link\\",
            \\"label\\": \\"bar\\",
            \\"href\\": \\"/docs/next/foo/barSlug\\"
          }
        ]
      },
      {
        \\"collapsed\\": true,
        \\"type\\": \\"category\\",
        \\"label\\": \\"Guides\\",
        \\"items\\": [
          {
            \\"type\\": \\"link\\",
            \\"label\\": \\"hello\\",
            \\"href\\": \\"/docs/next/\\"
          }
        ]
      }
    ]
  },
  \\"permalinkToSidebar\\": {
    \\"/docs/next/foo/barSlug\\": \\"docs\\",
    \\"/docs/next/\\": \\"docs\\"
  }
}",
  "version-with-slugs-20c.json": "{
  \\"pluginId\\": \\"default\\",
  \\"version\\": \\"withSlugs\\",
  \\"label\\": \\"withSlugs\\",
  \\"isLast\\": false,
  \\"docsSidebars\\": {
    \\"version-1.0.1/docs\\": [
      {
        \\"collapsed\\": true,
        \\"type\\": \\"category\\",
        \\"label\\": \\"Test\\",
        \\"items\\": [
          {
            \\"type\\": \\"link\\",
            \\"label\\": \\"rootAbsoluteSlug\\",
            \\"href\\": \\"/docs/withSlugs/rootAbsoluteSlug\\"
          }
        ]
      }
    ]
  },
  \\"permalinkToSidebar\\": {
    \\"/docs/withSlugs/rootAbsoluteSlug\\": \\"version-1.0.1/docs\\"
  }
}",
}
`;

exports[`versioned website content: global data 1`] = `
Object {
  "pluginName": Object {
    "pluginId": Object {
      "path": "/docs",
      "versions": Array [
        Object {
          "docs": Array [
            Object {
              "id": "foo/bar",
              "path": "/docs/next/foo/barSlug",
              "sidebar": "docs",
            },
            Object {
              "id": "hello",
              "path": "/docs/next/",
              "sidebar": "docs",
            },
            Object {
              "id": "slugs/absoluteSlug",
              "path": "/docs/next/absoluteSlug",
              "sidebar": undefined,
            },
            Object {
              "id": "slugs/relativeSlug",
              "path": "/docs/next/slugs/relativeSlug",
              "sidebar": undefined,
            },
            Object {
              "id": "slugs/resolvedSlug",
              "path": "/docs/next/slugs/hey/resolvedSlug",
              "sidebar": undefined,
            },
            Object {
              "id": "slugs/tryToEscapeSlug",
              "path": "/docs/next/tryToEscapeSlug",
              "sidebar": undefined,
            },
          ],
          "isLast": false,
          "label": "Next",
          "mainDocId": "hello",
          "name": "current",
          "path": "/docs/next",
        },
        Object {
          "docs": Array [
            Object {
              "id": "foo/bar",
              "path": "/docs/foo/bar",
              "sidebar": "version-1.0.1/docs",
            },
            Object {
              "id": "hello",
              "path": "/docs/",
              "sidebar": "version-1.0.1/docs",
            },
          ],
          "isLast": true,
          "label": "1.0.1",
          "mainDocId": "hello",
          "name": "1.0.1",
          "path": "/docs",
        },
        Object {
          "docs": Array [
            Object {
              "id": "foo/bar",
              "path": "/docs/1.0.0/foo/barSlug",
              "sidebar": "version-1.0.0/docs",
            },
            Object {
              "id": "foo/baz",
              "path": "/docs/1.0.0/foo/baz",
              "sidebar": "version-1.0.0/docs",
            },
            Object {
              "id": "hello",
              "path": "/docs/1.0.0/",
              "sidebar": "version-1.0.0/docs",
            },
          ],
          "isLast": false,
          "label": "1.0.0",
          "mainDocId": "hello",
          "name": "1.0.0",
          "path": "/docs/1.0.0",
        },
        Object {
          "docs": Array [
            Object {
              "id": "rootAbsoluteSlug",
              "path": "/docs/withSlugs/rootAbsoluteSlug",
              "sidebar": "version-1.0.1/docs",
            },
            Object {
              "id": "rootRelativeSlug",
              "path": "/docs/withSlugs/rootRelativeSlug",
              "sidebar": undefined,
            },
            Object {
              "id": "rootResolvedSlug",
              "path": "/docs/withSlugs/hey/rootResolvedSlug",
              "sidebar": undefined,
            },
            Object {
              "id": "rootTryToEscapeSlug",
              "path": "/docs/withSlugs/rootTryToEscapeSlug",
              "sidebar": undefined,
            },
            Object {
              "id": "slugs/absoluteSlug",
              "path": "/docs/withSlugs/absoluteSlug",
              "sidebar": undefined,
            },
            Object {
              "id": "slugs/relativeSlug",
              "path": "/docs/withSlugs/slugs/relativeSlug",
              "sidebar": undefined,
            },
            Object {
              "id": "slugs/resolvedSlug",
              "path": "/docs/withSlugs/slugs/hey/resolvedSlug",
              "sidebar": undefined,
            },
            Object {
              "id": "slugs/tryToEscapeSlug",
              "path": "/docs/withSlugs/tryToEscapeSlug",
              "sidebar": undefined,
            },
          ],
          "isLast": false,
          "label": "withSlugs",
          "mainDocId": "rootAbsoluteSlug",
          "name": "withSlugs",
          "path": "/docs/withSlugs",
        },
      ],
    },
  },
}
`;

exports[`versioned website content: route config 1`] = `
Array [
  Object {
    "component": "@theme/DocPage",
    "exact": false,
    "modules": Object {
      "versionMetadata": "~docs/version-1-0-0-0ad.json",
    },
    "path": "/docs/1.0.0",
    "priority": undefined,
    "routes": Array [
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "~docs/doc-1-0-0-hello-d36.json",
        },
        "path": "/docs/1.0.0/",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "~docs/doc-1-0-0-foo-bar-05d.json",
        },
        "path": "/docs/1.0.0/foo/barSlug",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "~docs/doc-1-0-0-foo-baz-b23.json",
        },
        "path": "/docs/1.0.0/foo/baz",
      },
    ],
  },
  Object {
    "component": "@theme/DocPage",
    "exact": false,
    "modules": Object {
      "versionMetadata": "~docs/version-current-6f8.json",
    },
    "path": "/docs/next",
    "priority": undefined,
    "routes": Array [
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "~docs/doc-current-hello-56d.json",
        },
        "path": "/docs/next/",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "~docs/doc-current-slugs-absolute-slug-752.json",
        },
        "path": "/docs/next/absoluteSlug",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "~docs/doc-current-foo-bar-79e.json",
        },
        "path": "/docs/next/foo/barSlug",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "~docs/doc-current-slugs-resolved-slug-1e3.json",
        },
        "path": "/docs/next/slugs/hey/resolvedSlug",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "~docs/doc-current-slugs-relative-slug-c86.json",
        },
        "path": "/docs/next/slugs/relativeSlug",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "~docs/doc-current-slugs-try-to-escape-slug-a96.json",
        },
        "path": "/docs/next/tryToEscapeSlug",
      },
    ],
  },
  Object {
    "component": "@theme/DocPage",
    "exact": false,
    "modules": Object {
      "versionMetadata": "~docs/version-with-slugs-20c.json",
    },
    "path": "/docs/withSlugs",
    "priority": undefined,
    "routes": Array [
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "~docs/doc-with-slugs-slugs-absolute-slug-540.json",
        },
        "path": "/docs/withSlugs/absoluteSlug",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "~docs/doc-with-slugs-root-resolved-slug-6a9.json",
        },
        "path": "/docs/withSlugs/hey/rootResolvedSlug",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "~docs/doc-with-slugs-root-absolute-slug-06f.json",
        },
        "path": "/docs/withSlugs/rootAbsoluteSlug",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "~docs/doc-with-slugs-root-relative-slug-4c6.json",
        },
        "path": "/docs/withSlugs/rootRelativeSlug",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "~docs/doc-with-slugs-root-try-to-escape-slug-b45.json",
        },
        "path": "/docs/withSlugs/rootTryToEscapeSlug",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "~docs/doc-with-slugs-slugs-resolved-slug-53a.json",
        },
        "path": "/docs/withSlugs/slugs/hey/resolvedSlug",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "~docs/doc-with-slugs-slugs-relative-slug-d52.json",
        },
        "path": "/docs/withSlugs/slugs/relativeSlug",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "~docs/doc-with-slugs-slugs-try-to-escape-slug-42a.json",
        },
        "path": "/docs/withSlugs/tryToEscapeSlug",
      },
    ],
  },
  Object {
    "component": "@theme/DocPage",
    "exact": false,
    "modules": Object {
      "versionMetadata": "~docs/version-1-0-1-1fb.json",
    },
    "path": "/docs",
    "priority": -1,
    "routes": Array [
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "~docs/doc-1-0-1-hello-131.json",
        },
        "path": "/docs/",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "~docs/doc-1-0-1-foo-bar-46d.json",
        },
        "path": "/docs/foo/bar",
      },
    ],
  },
]
`;

exports[`versioned website content: withSlugs version sidebars 1`] = `
Object {
  "version-1.0.1/docs": Array [
    Object {
      "collapsed": true,
      "items": Array [
        Object {
          "id": "version-withSlugs/rootAbsoluteSlug",
          "type": "doc",
        },
      ],
      "label": "Test",
      "type": "category",
    },
  ],
}
`;
